# ROS

./: README.md
install/: setup.bat  setup.ps1
install/my_interfaces_ysj/lib/: my_interfaces_ysj__python.lib  my_interfaces_ysj__rosidl_generator_c.lib  my_interfaces_ysj__rosidl_typesupport_c.lib  my_interfaces_ysj__rosidl_typesupport_introspection_c.lib  my_interfaces_ysj__rosidl_typesupport_introspection_cpp.lib
install/my_interfaces_ysj/share/my_interfaces_ysj/: local_setup.bat  package.bat  package.dsv  package.ps1
install/test_launch/share/test_launch/: demo.launch.py  package.bat  package.dsv  package.ps1
install/test_package/Lib/test_package/: fibonacci_action_server-script.py  service_client_node-script.py  service_server_node-script.py  simple_publisher_node-script.py  simple_subscriber_node-script.py  temperature_alert-script.py  temperature_sensor-script.py
install/test_package_ysj/share/test_package_ysj/: package.bat  package.dsv  package.ps1  package.xml
install/webots_ros2_msgs/lib/: webots_ros2_msgs__rosidl_typesupport_c.lib  webots_ros2_msgs__rosidl_typesupport_cpp.lib  webots_ros2_msgs__rosidl_typesupport_fastrtps_c.lib  webots_ros2_msgs__rosidl_typesupport_introspection_c.lib  webots_ros2_msgs__rosidl_typesupport_introspection_cpp.lib
src/my_interfaces_ysj/: CMakeLists.txt  package.xml
src/test_launch/: package.xml  setup.cfg  setup.py
src/test_package_ysj/: setup.cfg  setup.py
src/test_package_ysj/test_package_ysj/: fibonacci_action_server.py  service_client_node.py  simple_publisher_node.py
(+130 files in other folders)
